# laozhu_opentx_scripts

./: .CompetitionBroadcast  CLAUDE.md  CMakeLists.txt  CompileFiles.lua  GenCompileList.lua  README.md  audio.cpp  audio.h  audioQueue.cpp  audioQueue.h  build.bat  build_iup_so.sh  build_lua_glider_competition_sound_lib_for_linux.sh  build_sound_so.sh  builddll.bat  buildso.sh  cleandll.bat  cleanso.sh  install.bat  keyReceiver.cpp  keyReceiver.h  linux_com.cpp  luaApi.cpp  pandora_wrap.cpp  pandora_wrap.h  playsound.cpp  playsound.h  readme.md  sound.cpp  sounddll.cpp  soundso.cpp  strhelpers.cpp  strhelpers.h  test.lua  tts_en.cpp  win_com.cpp  wintest.lua
.github/workflows/: build_linux_competition_lib.yml  build_windows_competition_lib.yml  cmake.yml  cmake_windows.yml  main.yml
CompetitionBroadcast/: CLCB.lua  CompetitionBroadcast.lua  CompetitionBroadcastCore.lua  CurseCB.lua  GUICB.lua  GroupFileParser.lua  Pandora.lua  ParseInputOpt.lua  TaskFileParser.lua
LAOZHU/: Cfg.lua  CfgO.lua  DataFileDecode.lua  EmuTestUtils.lua  F3kCfg.lua  F3kFlightRecord.lua  F3kState.lua  F5jState.lua  FlightStatic.lua  LDReadVarMap.lua  LDRecord.lua  LDState.lua  LuaUtils.lua  Monitor.lua  OTUtils.lua  Queue.lua  README.md  Sensor.lua  SinkRateLog.lua  SinkRateReadVarMap.lua  SinkRateRecord.lua  SinkRateState.lua  SwitchTrigeDetector.lua  Timer.lua  f3kReadVarMap.lua  f5jReadVarMap.lua  launchReadVarMap.lua  launchRecord.lua  readVar.lua  utils.lua
LAOZHU/F3k/: F3kFlightRecord.lua  F3kRound.lua  F3kState.lua  f3kReadVarMap.lua
LAOZHU/F3k/Task/: AULD.lua  CommonTask.lua
LAOZHU/F3kWF/: AULDWF.lua  CommonTaskWF.lua  F3kCompetitionWF.lua  F3kRoundWF.lua
LAOZHU/comm/: LinuxSound.lua  PCIO.lua  PCLoadModule.lua  TestSound.lua  Timer.lua  TimerO.lua
MIXES/: 3kmix.lua  5jmix.lua
TELEMETRY/: 3ktel.lua  5jtel.lua  Fields.lua  InputSelector.lua  OCL.lua  README.md  adjust.lua  comp.lua  key.lua  pando.lua  test.lua  testf.lua  testo.lua  tp.lua  ut.lua  utO.lua
TELEMETRY/3k/: F3KRecordListView.lua  FlightPage.lua  FlightPageNew copy.lua  FlightPageNew.lua  FlightStaticPage.lua  RoundSetupPage.lua  SetupPage.lua  SmallFontFlightListPage.lua  TaskSelector.lua  TaskSelectorO.lua  f3kCore.lua
TELEMETRY/5j/: FlightPage.lua  LargeFontFlightListPage.lua  SetupPage.lua  SmallFontFlightListPage.lua
TELEMETRY/adjust/: GlobalVar.lua  ManagerOutput.lua  Monitor.lua  Output1.lua  OutputCurve.lua  OutputCurveManager.lua  ReplaceMix.lua  SaveAndRestoreParam.lua  SelectChannel.lua  Setup.lua  output.lua
TELEMETRY/adjust/LD/: LD.lua  LDCfgPage.lua  LDRecordListView.lua
TELEMETRY/adjust/Launch/: LRecordListView.lua  Launch.lua  LaunchCfgPage.lua  RecordListView.lua
TELEMETRY/adjust/SinkRate/: RecordListView.lua  SRRecordListView.lua  SinkRate.lua  SinkRateCfgPage.lua
TELEMETRY/common/: Button.lua  ButtonO.lua  CheckBox.lua  CheckBoxO.lua  CurveSelector.lua  CurveSelectorO.lua  Fields.lua  InputSelector.lua  InputSelectorO.lua  InputView.lua  InputViewO.lua  LoadModule.lua  ModeSelector.lua  ModeSelectorO.lua  NumEdit.lua  NumEditO.lua  OutputSelector.lua  OutputSelectorO.lua  Selector.lua  SelectorO.lua  TextEdit.lua  TextEditO.lua  TimeEdit.lua  TimeEditO.lua  ViewMatrix.lua  ViewMatrixO.lua  comp.lua  keyMap.lua
build_img/: Dockerfile  Dockerfile_iup  Dockerfile_sound_lib  build_iup_build_img.sh  build_sound_lib_build_img.sh  buildimg.sh  run_build_env.sh  run_iup_build_env.sh  run_sound_build_env.sh
competition_lib/: WaveFile.cpp  audio.h  audioQueue.cpp  audioQueue.h  build_lualib.bat  buildgtest.bat  comm.h  keyReceiver.cpp  keyReceiver.h  linux_com.cpp  linux_com.h  luaApi.cpp  luaApi.h  os_adapt.h  pandora_wrap.cpp  pandora_wrap.h  playsound.cpp  playsound.h  sounddll.cpp  test.cpp  test.lua  tts_en.h  win_com.h
competition_lib/test/: buildgtest.bat  test_linux_com.cpp
data/: 20210221.records
emutest/: luaForTestLoadModule.lua  testCfg.lua  testCfgO.lua  testDataFileDecode.lua  testLoadModule.lua  testManagerOutput.lua  testOutputCurveManager.lua  testSinkRateRecord.lua  test_data_file.data
test/: CMakeLists.txt  TestF3kCfg.lua  TestF3kCompetitionWF.lua  TestF3kFlightRecord.lua  TestF3kRound.lua  TestF3kState.lua  TestF5jState.lua  TestFlightStatic.lua  TestLaozhuUtils.lua  TestQueue.lua  TestReadVar.lua  TestSensor.lua  TestSinkRateState.lua  TestSwitchTrigeDetector.lua  TestTimer.lua  TestTimerO.lua  buildgtest.bat  groups.txt  tasks.txt  test.cpp  test.lua  test_pandora_wrap.cpp  test_win_com.cpp  utils4Test.lua
test/TestCompetitionBroadcast/: TestGroupFileParser.lua  TestTaskFileParser.lua
test/testF3kTask/: TestAULD.lua  TestCommonTask.lua
third_part/iup/pdflib7/src/: config.mak  pdflib.rc
third_part/iup/pdflib7/src/pdcore/: pc_config.h  pc_file.c
third_part/iup/pdflib7/src/pdflib/: p_intern.h  p_params.c
third_part/iup/zlib/: COPYRIGHT
third_part/iup/zlib/mak.vc12/: zlib.sln  zlib.vcxproj.filters
third_part/iup/zlib/mak.vc15/: zlib.sln  zlib.vcxproj
third_part/iup/zlib/src/: config.mak  make_uname.bat
thirt_part/iup/pdflib7/src/pdcore/: pc_util.c
thirt_part/iup/zlib/mak.vc12/: zlib.vcxproj
