include(GoogleTest)
cmake_minimum_required(VERSION 3.13)

project(lua_glider_competition_sound_lib)
if(WIN32)

    SET(LIB_SRC audio.cpp audioQueue.cpp luaApi.cpp sounddll.cpp strhelpers.cpp tts_en.cpp keyReceiver.cpp win_com.cpp pandora_wrap.cpp)
    #SET(TEST_SRC test/test.cpp win_com.cpp test/test_win_com.cpp)
    set(CMAKE_CXX_COMPILER "g++")
    set(LUA_INCLUDE_DIR "third_part/lua-5.3.6/src/")
    set(LUA_LIB_DIR "third_part/lua-5.3.6/src/")
    #set(GTEST_INCLUDE_DIR "C:/Program Files (x86)/googletest-distribution/include/")
    #set(GTEST_LIB_DIR "C:/Program Files (x86)/googletest-distribution/lib/")
    LINK_LIBRARIES(winmm stdc++ lua)
    include_directories(${LUA_INCLUDE_DIR} ${CPLUS_INCLUDE_PATH})# ${GTEST_INCLUDE_DIR})
    link_directories(${CPLUS_LIB_PATH} ${LUA_LIB_DIR})# ${GTEST_LIB_DIR})

#    enable_testing()
#    ADD_EXECUTABLE(test1 ${TEST_SRC})
#    target_include_directories(test1 PRIVATE ${GTEST_INCLUDE_DIR})
#    target_link_directories(test1 PRIVATE ${GTEST_LIB_DIR})
#    target_link_libraries(test1 gtest)
#    add_test(NAME test1 COMMAND test1.exe)
#    #gtest_discover_tests(test1)

    ADD_LIBRARY(sound SHARED ${LIB_SRC})
    set_target_properties(sound PROPERTIES PREFIX "")
    add_subdirectory(test)

endif(WIN32)
if(UNIX AND NOT APPLE)
    set(LINUX TRUE)
endif()
if(LINUX)
    SET(LIB_SRC audio.cpp audioQueue.cpp luaApi.cpp soundso.cpp strhelpers.cpp tts_en.cpp playsound.cpp WaveFile.cpp)
    set(CMAKE_CXX_COMPILER "g++")
    LINK_LIBRARIES(asound stdc++)
    FIND_PACKAGE(Lua REQUIRED)
    include_directories(${LUA_INCLUDE_DIR} ${CPLUS_INCLUDE_PATH})
    link_directories(${CPLUS_LIB_PATH})
    link_libraries(${LUA_LIBRARIES})
    ADD_LIBRARY(sound SHARED ${LIB_SRC})
    set_target_properties(sound PROPERTIES PREFIX "")
endif(LINUX)
