include(GoogleTest)
cmake_minimum_required(VERSION 3.13)

#project(lua_glider_competition_sound_lib_test)
if(WIN32)
    SET(TEST_SRC test.cpp ../win_com.cpp test_win_com.cpp ../pandora_wrap.cpp test_pandora_wrap.cpp)
    set(CMAKE_CXX_COMPILER "g++")
    set(GTEST_INCLUDE_DIR "C:/Program Files (x86)/googletest-distribution/include/")
    set(GTEST_LIB_DIR "C:/Program Files (x86)/googletest-distribution/lib/")
    #enable_testing()
    ADD_EXECUTABLE(test1 ${TEST_SRC})
    target_include_directories(test1 PRIVATE ${GTEST_INCLUDE_DIRS})
    target_link_directories(test1 PRIVATE ${GTEST_LIB_DIR})
    target_link_libraries(test1 gtest)
    add_test(NAME test1 COMMAND test1.exe)
    #gtest_discover_tests(test1)
endif(WIN32)
if(UNIX AND NOT APPLE)
    set(LINUX TRUE)
endif()
if(LINUX)
    set(CMAKE_CXX_COMPILER "g++")
endif(LINUX)
